# tech-interview-prep

./: .flake8  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  ROADMAP.md  conf.py  coverage.rst  easy_index.rst  hard_index.rst  index.rst  medium_index.rst  pattern_index.rst  patterns.rst  problem_index.rst  pyproject.toml  requirements.txt  script.py
.github/workflows/: deploy.yml
_static/: custom.css
_static/css/: pyodide_runner.css
_static/js/: coverage_filter.js  patterns_filter.js  pyodide_runner.js
leetcode/: LRUCache.py  MergeKSortedLists.py  MissingNumber.py  PascalsTriangle.py  Permutations.py  README.md  Tries.py
problems/: catalog.yaml
scripts/: discovery.py  fetch_leetcode_description.py  generate_coverage.py  generate_difficulty_index.py  generate_docs.py  generate_patterns_index.py  migrate_solution.py  problems.csv  prune_module_suffix.py  rendering.py  scaffold_problem.py  update_literalinclude.py  update_literalinclude_lines.py
solutions/: AddBinary.py  AddTwoNumbers.py  BestTimeToBuyAndSellStock.py  BinaryTreeInorderTraversal.py  BinaryTreeLevelOrderTraversal.py  BinaryTreeZigzagLevelOrderTraversal.py  BitwiseANDOfNumbersRange.py  ClimbingStairs.py  ConstructBinaryTreeFromPreorderAndInorderTraversal.py  ContainerWithMostWater.py  ContainsDuplicateII.py  ConvertSortedArrayToBST.py  CountAndSay.py  CountPrimes.py  DeleteNodeInALinkedList.py  DivideTwoIntegers.py  FindFirstAndLastPositionOfElementInSortedArray.py  FirstUniqueCharacterInAString.py  FizzBuzz.py  GameOfLife.py  GasStation.py  GenerateParentheses.py  GroupAnagrams.py  HIndex.py  HappyNumber.py  InsertDeleteGetRandomO1.py  IntegerToRoman.py  IntersectionOfTwoArraysII.py  IntersectionOfTwoLinkedLists.py  IsSubsequence.py  IsomorphicStrings.py  JumpGame.py  LRUCache.py  LengthOfLastWord.py  LengthOfLongestSubstring.py  LetterCombinationsOfAPhoneNumber.py  LinkedListCycle.py  LongestCommonPrefix.py  LongestPalindromicSubstring.py  MajorityElement.py  (+46 more)
solutions/easy/: AddBinary.py  BestTimeToBuyAndSellStock.py  BinaryTreeInorderTraversal.py  ClimbingStairs.py  ContainsDuplicateII.py  ConvertSortedArrayToBST.py  FirstUniqueCharacterInAString.py  Sqrtx.py  (+34 more)
(+550 files in other folders)
