[tool.black]
line-length = 80
target-version = ["py311", "py312", "py313"]

[project]
name = "tech-interview-prep"
version = "0.0.0"
description = "Interview prep solutions and Sphinx docs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "George Pu"}]
dependencies = [
    "black>=26.3.1",
    "flake8>=7.0",
    "pypandoc>=1.13",
    "requests>=2.32.0",
    "sphinx>=9.0.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-prompt>=1.10.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-googleanalytics>=0.5",
    "sphinxcontrib-jquery>=4.1",
    "sphinx-datatables>=1.0.0",
    "pyyaml>=6.0",
]
